# ppp3

./: .gitignore  README.md
2.1-hello/: main.cpp
2.3-type/: main.cpp
2.4-operators/: main.cpp
2.5-assign/: main.cpp
2.9-conv/: main.cpp
3.4-comput/: CMakePresets.json  main.cpp
3.4-loop/: main.cpp
3.6-drill/: main.cpp
3.6-ex/: CMakeLists.txt  main.cpp
5-calc/: CMakeLists.txt  main.cpp  main_v0.1.cpp
